quorum/test/tests/TypeChecker/Pass/ImpAssignNumberIntObjWrapped.quorum
class main
    action main
        Integer int
        int:SetValue(5)
        number n = int
    end
end