quorum/test/tests/TypeChecker/Fail/ExpAssignNumObjIntObj.quorum
Integer int
int:SetValue(5)
Number n = cast(Number, int)